Almost finish CSS and block in other pages

--- a/travelRecommendation/travel_recommendation.html
+++ b/travelRecommendation/travel_recommendation.html
@@ -5,15 +5,15 @@
         <link rel="stylesheet" href="travel_recommendation.css">
     </head>
 
-    <body id="home">
+    <body class="cover" id="home">
         <nav>
             <span class="brand">PVT Travel</span>
             <div class="nav-links">
                 <ul>
-                <li>Home</li>
-                <li>About Us</li>
-                <li>Contact Us</li>
-            </ul>
+                    <li><a href="travel_recommendation.html">Home</a></li>
+                    <li><a href="about_us.html">About Us</a></li>
+                    <li><a href="contact_us.html">Contact Us</a></li>
+                </ul>
             </div>
             <div class="search">
                 <input type="search" class="input" id="travelSearch" placeholder="Enter a destination or keyword">
@@ -24,15 +24,15 @@
 
         <div class="container">
             <div class="introduction">
-                <h1>Focus on the experience</h1>
-                <p>We help you plan memories. Not travel plans.</p>
+                <h1>Find an experience</h1>
+                <p>We help you plan memories, not travel plans. Explore the unknown and learn new cultures.</p>
                 <button class="button primary" id="bookNow">Book now</button>
             </div>
             
             <div class="social-links">
                 <ul>
                     <li><a id="instagram" href="#"></a></li>
-                    <li><a id="threads" href="#"></a></li>
+                    <li><a id="pinterest" href="#"></a></li>
                     <li><a id="facebook" href="#"></a></li>
                     <li><a id="youtube" href="#"></a></li>
                 </ul>
