Draft of search functionality

--- a/travelRecommendation/about_us.html
+++ b/travelRecommendation/about_us.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>PVT Travel</title>
+        <title>About Us</title>
         <link rel="stylesheet" href="travel_recommendation.css">
     </head>
 
