--- a/travelRecommendation/travel_recommendation.html
+++ b/travelRecommendation/travel_recommendation.html
@@ -22,23 +22,29 @@
             </div>
         </nav>
 
-        <div class="container">
-            <div class="introduction">
-                <h1>Find an experience</h1>
-                <p>We help you plan memories, not travel plans. Explore the unknown and learn new cultures.</p>
-                <button class="button primary" id="bookNow">Book now</button>
+        <div class="row container">
+            <div class="col">
+                <div class="introduction">
+                    <h1>Find an experience</h1>
+                    <p>We help you plan memories, not travel plans. Explore the unknown and learn new cultures.</p>
+                    <button class="button primary" id="bookNow">Book now</button>
+                </div>
+            
+                <div class="social-links">
+                    <ul>
+                        <li><a id="instagram" href="#"></a></li>
+                        <li><a id="pinterest" href="#"></a></li>
+                        <li><a id="facebook" href="#"></a></li>
+                        <li><a id="youtube" href="#"></a></li>
+                    </ul>
+                </div>
+
+                <p class="photo-attribution">Tokyo, Japan &ndash; Photo by <a href="https://unsplash.com/photos/men-in-black-suits-standing-in-the-hallway-tKCd-IWc4gI">Yoav Aziz</a></p>
             </div>
             
-            <div class="social-links">
-                <ul>
-                    <li><a id="instagram" href="#"></a></li>
-                    <li><a id="pinterest" href="#"></a></li>
-                    <li><a id="facebook" href="#"></a></li>
-                    <li><a id="youtube" href="#"></a></li>
-                </ul>
+            <div class="col">
+                <div id="searchResults"><!-- Search results display here --></div>
             </div>
-
-            <p class="photo-attribution">Tokyo, Japan &ndash; Photo by <a href="https://unsplash.com/photos/men-in-black-suits-standing-in-the-hallway-tKCd-IWc4gI">Yoav Aziz</a></p>
         </div>
 
         <script src="travel_recommendation.js"></script>
