--- a/travelRecommendation/contact_us.html
+++ b/travelRecommendation/contact_us.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>PVT Travel</title>
+        <title>Contact us</title>
         <link rel="stylesheet" href="travel_recommendation.css">
     </head>
 
@@ -26,17 +26,17 @@
             <div class="row">
                 <div class="col">
                     <form id="contactForm">
-                        <div>
+                        <div class="fluid">
                             <label for="name">Name</label>
                             <input class="input" type="text" id="name" name="name" required>
                         </div>
 
-                        <div>
+                        <div class="fluid">
                             <label for="email">Email</label>
                             <input type="email" id="email" name="email" required>
                         </div>
 
-                        <div>
+                        <div class="fluid">
                             <label for="message">Message</label>
                             <textarea id="message" name="message" rows="5" required></textarea>
                         </div>
