--- a/contact_us.html
+++ b/contact_us.html
@@ -10,7 +10,7 @@
             <span class="brand">PVT Travel</span>
             <div class="nav-links">
                 <ul>
-                    <li><a href="travel_recommendation.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="about_us.html">About Us</a></li>
                     <li><a href="contact_us.html">Contact Us</a></li>
                 </ul>
